salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Branch_1__c.field-meta.xml
<CustomField>
    <fullName>BPP_Branch_1__c</fullName>
    <description>BPP 1st branch selection for this opportunity.  Populated by CAB.</description>
    <label>BPP Branch 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>London - City</fullName>
            </value>
            <value>
                <fullName>London - Waterloo</fullName>
            </value>
            <value>
                <fullName>London - Holborn</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Leeds</fullName>
            </value>
            <value>
                <fullName>Croydon</fullName>
            </value>
            <value>
                <fullName>Milton Keynes</fullName>
            </value>
            <value>
                <fullName>eLearning Center</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Maidstone</fullName>
            </value>
            <value>
                <fullName>Glasgow</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Bristol</fullName>
            </value>
            <value>
                <fullName>Nottingham</fullName>
            </value>
            <value>
                <fullName>Cardiff</fullName>
            </value>
            <value>
                <fullName>Newcastle</fullName>
            </value>
            <value>
                <fullName>Southampton</fullName>
            </value>
            <value>
                <fullName>Manchester</fullName>
            </value>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>Swindon</fullName>
            </value>
            <value>
                <fullName>Abingdon – McTimoney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>