salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>BPP_Cancellation_Reason__c</fullName>
    <description>Cancellation Reason field to be mandatory if Status is set to Cancelled or Declined on Student Application Opportunity</description>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unable to fund the programme</fullName>
            </value>
            <value>
                <fullName>Change of profession</fullName>
            </value>
            <value>
                <fullName>Taken up a job</fullName>
            </value>
            <value>
                <fullName>Gone to a competitor</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Failed previous qualification</fullName>
            </value>
            <value>
                <fullName>Location/Mode not available</fullName>
            </value>
            <value>
                <fullName>Family Emergency</fullName>
            </value>
            <value>
                <fullName>VISA/CAS/EU Delay</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
            <value>
                <fullName>VISA Refusal</fullName>
            </value>
            <value>
                <fullName>Duplicate Opportunity</fullName>
            </value>
            <value>
                <fullName>CAS requirement not met</fullName>
            </value>
            <value>
                <fullName>Academic/English entry not met</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Chosen to study at another BPP location</fullName>
            </value>
            <value>
                <fullName>Chosen to study another BPP programme</fullName>
            </value>
            <value>
                <fullName>appMissedDeadline</fullName>
                <label>Failed to submit application before deadline</label>
            </value>
            <value>
                <fullName>appWithdrawApplicant</fullName>
                <label>Learner withdrawn</label>
            </value>
            <value>
                <fullName>appNoResponseApplicant</fullName>
                <label>No response from applicant</label>
            </value>
            <value>
                <fullName>appNoResponseEmployer</fullName>
                <label>No response from employer</label>
            </value>
            <value>
                <fullName>appCloneCancelChangedEmployer</fullName>
                <label>Cancelled due to change of employer</label>
            </value>
            <value>
                <fullName>appCloneCancelChangedProgramme</fullName>
                <label>Change of programme</label>
            </value>
            <value>
                <fullName>appRejectIneligibleResidency</fullName>
                <label>Ineligible status (Residency)</label>
            </value>
            <value>
                <fullName>appRejectIneligibleVisa</fullName>
                <label>Ineligible status (VISA)</label>
            </value>
            <value>
                <fullName>appRejectRoleOnboarding</fullName>
                <label>Job role does not match criteria (Onboarding)</label>
            </value>
            <value>
                <fullName>appRejectRoleHop</fullName>
                <label>Job role does not match criteria (Hop)</label>
            </value>
            <value>
                <fullName>appRejectOverqualified</fullName>
                <label>Applicant is not suitable for selected programme</label>
            </value>
            <value>
                <fullName>appRejectFundingIssue</fullName>
                <label>Application has a funding issue</label>
            </value>
            <value>
                <fullName>appNotEligible</fullName>
                <label>Not Eligible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>