salesforce-main/src/main/default/objects/Opportunity/fields/BPP_CAS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BPP_CAS_End_Date__c</fullName>
    <label>CAS End Date</label>
    <type>Date</type>
</CustomField>