salesforce-main/src/main/default/objects/Opportunity/fields/BPP_CAS_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>BPP_CAS_Last_Updated__c</fullName>
    <label>CAS Last Updated</label>
    <type>Date</type>
</CustomField>