salesforce-main/src/main/default/objects/Opportunity/fields/BPP_CAS_Number__c.field-meta.xml
<CustomField>
    <fullName>BPP_CAS_Number__c</fullName>
    <label>CAS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>