salesforce-main/src/main/default/objects/Opportunity/fields/BPP_CAS_Officer__c.field-meta.xml
<CustomField>
    <fullName>BPP_CAS_Officer__c</fullName>
    <description>Field to identify responsible owner of CAS Issuing decision</description>
    <label>CAS Officer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>