salesforce-main/src/main/default/objects/Opportunity/fields/BPP_CAS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>BPP_CAS_Start_Date__c</fullName>
    <label>CAS Start Date</label>
    <type>Date</type>
</CustomField>