salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Course_Level__c.field-meta.xml
<CustomField>
    <fullName>BPP_Course_Level__c</fullName>
    <description>Course Level pick list for &apos;CAS VISA Compliance&apos; section located on the &apos;Application&apos; Opportunity Record Type</description>
    <label>Course Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RQF Level 5</fullName>
            </value>
            <value>
                <fullName>RQF Level 6</fullName>
            </value>
            <value>
                <fullName>RQF Level 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>