salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Date_CAS_Issued__c.field-meta.xml
<CustomField>
    <fullName>BPP_Date_CAS_Issued__c</fullName>
    <label>Date CAS Issued</label>
    <type>Date</type>
</CustomField>