salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Date_Reported_to_UKVI__c.field-meta.xml
<CustomField>
    <fullName>BPP_Date_Reported_to_UKVI__c</fullName>
    <label>Date Reported to UKVI</label>
    <type>Date</type>
</CustomField>