salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Deferral_Reason__c.field-meta.xml
<CustomField>
    <fullName>BPP_Deferral_Reason__c</fullName>
    <label>Deferral Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failed prior programme</fullName>
            </value>
            <value>
                <fullName>Scheduled re-sits</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Not able to start without a TC</fullName>
            </value>
            <value>
                <fullName>Funding Issue</fullName>
            </value>
            <value>
                <fullName>VISA/CAS/EU Delay</fullName>
            </value>
            <value>
                <fullName>Academic Documents Delay</fullName>
            </value>
            <value>
                <fullName>Family Emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>