salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Deferred_On__c.field-meta.xml
<CustomField>
    <fullName>BPP_Deferred_On__c</fullName>
    <description>Deferred On Date, triggered on Status Change</description>
    <label>Deferred On</label>
    <type>Date</type>
</CustomField>