salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Deferred_To__c.field-meta.xml
<CustomField>
    <fullName>BPP_Deferred_To__c</fullName>
    <description>Deferred To Date on status change</description>
    <label>Deferred To</label>
    <type>Date</type>
</CustomField>