salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Graduate_Route_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>BPP_Graduate_Route_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Graduate Route Confirmed checkbox for &apos;CAS VISA Compliance&apos; section located on the &apos;Application&apos; Opportunity Record Type</description>
    <label>Graduate Route Confirmed</label>
    <type>Checkbox</type>
</CustomField>