salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>BPP_Interview_Date__c</fullName>
    <description>Interview Date field in &quot;Credibility Assessment&quot; section on the &apos;Application&apos; Opportunity Record Type</description>
    <label>Interview Date</label>
    <type>Date</type>
</CustomField>