salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Last_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>BPP_Last_Arrival_Date__c</fullName>
    <description>Last Arrival Date field for &apos;CAS VISA Compliance&apos; section located on the &apos;Application&apos; Opportunity Record Type</description>
    <label>Last Arrival Date</label>
    <type>Date</type>
</CustomField>