salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Last_Date_of_Arrival__c.field-meta.xml
<CustomField>
    <fullName>BPP_Last_Date_of_Arrival__c</fullName>
    <label>Last Date of Arrival</label>
    <type>Date</type>
</CustomField>