salesforce-main/src/main/default/objects/Opportunity/fields/BPP_NHS_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>BPP_NHS_Sponsor__c</fullName>
    <description>This field must be used for all NHS sponsored opportunities for use with the HESA return, the data in this field will be replicated in the Sponsoring Organization field for continuity of reporting</description>
    <inlineHelpText>This field must be used for all NHS sponsored opportunities for use with the HESA return, the data in this field will be replicated in the Sponsoring Organization field for continuity of reporting</inlineHelpText>
    <label>NHS Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001~ Not an NHS Employee</fullName>
                <label>Not an NHS Employee</label>
            </value>
            <value>
                <fullName>RCF~ Airedale NHS Foundation Trust</fullName>
                <label>Airedale NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>RBS~ Alder Hey Children&apos;s NHS Foundation Trust</fullName>
                <label>Alder Hey Children&apos;s NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>7A6~ Aneurin Bevan University LHB</fullName>
                <label>Aneurin Bevan University LHB</label>
            </value>
            <value>
                <fullName>12R~ Arden, Herefordshire and Worcestershire Commissioning Hub</fullName>
                <label>Arden, Herefordshire and Worcestershire Commissioning Hub</label>
            </value>
            <value>
                <fullName>RTK~ Ashford and St Peter&apos;s Hospitals NHS Foundation Trust</fullName>
                <label>Ashford and St Peter&apos;s Hospitals NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>RVN~ Avon and Wiltshire Mental Health Partnership NHS Trust</fullName>
                <label>Avon and Wiltshire Mental Health Partnership NHS Trust</label>
            </value>
            <value>
                <fullName>RF4~ Barking, Havering and Redbridge University Hospitals NHS Trust</fullName>
                <label>Barking, Havering and Redbridge University Hospitals NHS Trust</label>
            </value>
            <value>
                <fullName>RRP~ Barnet, Enfield and Haringey Mental Health NHS Trust</fullName>
                <label>Barnet, Enfield and Haringey Mental Health NHS Trust</label>
            </value>
            <value>
                <fullName>RVL~ Barnet and Chase Farm Hospitals NHS Trust</fullName>
                <label>Barnet and Chase Farm Hospitals NHS Trust</label>
            </value>
            <value>
                <fullName>RFF~ Barnsley Hospital NHS Foundation Trust</fullName>
                <label>Barnsley Hospital NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>R1H~ Barts Health NHS Trust</fullName>
                <label>Barts Health NHS Trust</label>
            </value>
            <value>
                <fullName>RDD~ Basildon and Thurrock University Hospitals NHS Foundation Trust</fullName>
                <label>Basildon and Thurrock University Hospitals NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>13G~ Bath, Gloucestershire, Swindon and Wiltshire Commissioning Hub</fullName>
                <label>Bath, Gloucestershire, Swindon and Wiltshire Commissioning Hub</label>
            </value>
            <value>
                <fullName>RC1~ Bedford Hospital NHS Trust</fullName>
                <label>Bedford Hospital NHS Trust</label>
            </value>
            <value>
                <fullName>RC9~ Bedfordshire Hospitals NHS Foundation Trust</fullName>
                <label>Bedfordshire Hospitals NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>ZT001~ Belfast Health &amp; Social Care Trust</fullName>
                <label>Belfast Health &amp; Social Care Trust</label>
            </value>
            <value>
                <fullName>RWX~ Berkshire Healthcare NHS Foundation Trust</fullName>
                <label>Berkshire Healthcare NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>7A1~ Betsi Cadwaladr University LHB</fullName>
                <label>Betsi Cadwaladr University LHB</label>
            </value>
            <value>
                <fullName>RXT~ Birmingham and Solihull Mental Health NHS Foundation Trust</fullName>
                <label>Birmingham and Solihull Mental Health NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>12T~ Birmingham and The Black Country Commissioning Hub</fullName>
                <label>Birmingham and The Black Country Commissioning Hub</label>
            </value>
            <value>
                <fullName>RYW~ Birmingham Community Healthcare NHS Foundation Trust</fullName>
                <label>Birmingham Community Healthcare NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>RQ3~ Birmingham Women&apos;s and Children&apos;s NHS Foundation Trust</fullName>
                <label>Birmingham Women&apos;s and Children&apos;s NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>RLU~ Birmingham Women&apos;s NHS Foundation Trust</fullName>
                <label>Birmingham Women&apos;s NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>TAJ~ Black Country Healthcare NHS Foundation Trust</fullName>
                <label>Black Country Healthcare NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>RXL~ Blackpool Teaching Hospitals NHS Foundation Trust</fullName>
                <label>Blackpool Teaching Hospitals NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>RMC~ Bolton NHS Foundation Trust</fullName>
                <label>Bolton NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>TAD~ Bradford District Care NHS Foundation Trust</fullName>
                <label>Bradford District Care NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>RAE~ Bradford Teaching Hospitals NHS Foundation Trust</fullName>
                <label>Bradford Teaching Hospitals NHS Foundation Trust</label>
            </value>
            <value>
                <fullName>RY2~ Bridgewater Community Healthcare NHS Foundation Trust</fullName>
                <label>Bridgewater Community Healthcare NHS Foundation Trust</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>