salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Portal__c.field-meta.xml
<CustomField>
    <fullName>BPP_Portal__c</fullName>
    <description>Report from the field to monitor leads and opportunities that come via the portal and then BPP can pay the YPO/Salisbury rebate</description>
    <label>Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCS</fullName>
            </value>
            <value>
                <fullName>YPO</fullName>
            </value>
            <value>
                <fullName>Salisbury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>