salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Reason_for_External_Refusal__c.field-meta.xml
<CustomField>
    <fullName>BPP_Reason_for_External_Refusal__c</fullName>
    <label>Reason for External Refusal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--Please Select --</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Credibility</fullName>
            </value>
            <value>
                <fullName>Deception</fullName>
            </value>
            <value>
                <fullName>Non-Genuine</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>TB Requirements</fullName>
            </value>
            <value>
                <fullName>Compliance Documents</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>