salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Reinterview_Date__c.field-meta.xml
<CustomField>
    <fullName>BPP_Reinterview_Date__c</fullName>
    <description>Reinterview Date field in &quot;Credibility Assessment&quot; section on &apos;Application&apos; Opportunity Record Type</description>
    <label>Reinterview Date</label>
    <type>Date</type>
</CustomField>