salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Reinterview_Result__c.field-meta.xml
<CustomField>
    <fullName>BPP_Reinterview_Result__c</fullName>
    <description>Reinterview Result field in &quot;Credibility Assessment&quot; section on &apos;Application&apos; Opportunity Record Type</description>
    <label>Reinterview Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Interview Did Not Run</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>