salesforce-main/src/main/default/objects/Opportunity/fields/BPP_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>BPP_Reviewed_By__c</fullName>
    <description>Reviewed By text field in section  &quot;Credibility Assessment&quot; on the &apos;Application&apos; Opportunity Record Type</description>
    <label>Reviewed By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>