salesforce-main/src/main/default/objects/Opportunity/fields/BPP_SOP_Resubmission_Status__c.field-meta.xml
<CustomField>
    <fullName>BPP_SOP_Resubmission_Status__c</fullName>
    <description>SOP Resubmission Status pick list field in section  &quot;Credibility Assessment&quot; on the &apos;Application&apos; Opportunity Record Type</description>
    <label>SOP Resubmission Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BPP_SOP_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Be Reviewed</fullName>
            </value>
            <value>
                <fullName>Reviewed and Confirmed</fullName>
            </value>
            <value>
                <fullName>Resubmission Required</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>SOP Not Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>